--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Rozha+One&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap');
+
+
 .home-image {
     background-image: url('https://images.pexels.com/photos/147411/italy-mountains-dawn-daybreak-147411.jpeg'); 
     background-size: cover; 
@@ -17,6 +21,8 @@
     display: flex;
     text-align: center;
     z-index: 10;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: bold;
   }
   .description1{
     color: white;
@@ -27,6 +33,7 @@
     left: 368px;
     text-align: center;
     z-index: 10;
+    font-family: 'Titillium Web', sans-serif;
 
   }
   .travel-world-div{
@@ -46,6 +53,7 @@
     top: 690px;
     left: 50px;
     z-index: 10;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2); 
   }
   .find-now-btn{
     width: 100px;
@@ -73,6 +81,7 @@
     height: 40px;
     padding-right: 50px;
   }
+  
   .when-box{
     position: absolute;
     top: 25px;
@@ -83,6 +92,7 @@
     height: 40px;
     padding-right: 50px;
   }
+  
   .travel-type{
     position: absolute;
     top: 25px;
@@ -97,23 +107,84 @@
   }
   .about-div{
     position: absolute;
-    top: 900px;
-    left: 700px;
-    text-align: justify;
+    top: 1020px;
+    left: 650px;
+    /*text-align: justify;*/
     line-height: 1.5;
   }
   .about-us{
-    font-weight: bold;
+    font-weight: regular;
     position: absolute;
-    top: -100px;
-    left: 1px ;
-    font-size: 45px;
+    top: -120px;
+    left: 15px ;
+    font-size: 18px;
+    font-family: 'Titillium Web', sans-serif;
+    color: #c29d59;
 
   }
   .plan{
     font-weight: semibold;
     position: absolute;
-    top: -40px;
+    top: -70px;
     left: 1px ;
-    font-size: 25px;
+    font-size: 35px;
+    font-family: 'Cormorant Garamond', serif;
+  }
+  .about-us-line-div{
+    width: 2px;
+    height: 30px;
+    background-color: #c29d59;
+    position: absolute;
+    top: -121px;
+    left: 1px;
+  }
+  .plan-description{
+    font-family: 'Titillium Web', sans-serif;
+  }
+  .read-more-btn{
+    width: 170px;
+    height: 50px;
+    background-color: #c29d59;
+    color: white;
+    position: absolute;
+    top: 230px;
+    border-radius: 5px;
+  }
+  .read-more-txt{
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: bold;
+    position: absolute;
+    top: 12px;
+    left: 40px;
+    cursor: pointer;
+  }
+  .big-picture-div{
+    width: 440px;
+    height: 450px;
+    background-color: #c29d59;
+    position: absolute;
+    left: 50px;
+    top: 870px;
+    background-image: url("./travel1.jpg");
+    background-size: cover; 
+    background-position: center;
+    border: 3px solid #c29d59;
+    box-shadow: inset 0 0 0 8px white;
+    overflow: hidden;
+    
+  }
+  .small-picture-div{
+    width: 260px;
+    height: 190px;
+    background-color: #d8290e;
+    position: absolute;
+    left: 340px;
+    top: 1160px;
+    background-image: url("./travel2.jpg");
+    background-size: cover; 
+    background-position: center;
+    border: 3px solid #c29d59;
+    box-shadow: inset 0 0 0 6px white;
+    overflow: hidden;
+    
   }
